# sentry-kafka-schemas

./: .craft.yml  .envrc  .flake8  .gitignore  .prettierignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  schema-changes.yml
docs/source/: conf.py  generate_services.py  index.rst  services.rst
docs/source/_static/: custom.css
examples/: querylog1
examples/buffered-segment/1/: basic_buffered_segment.json
examples/buffered-segments/1/: basic_buffered_segment.json
examples/errors/1/: errors1
examples/events/1/: end-delete-groups.json  end-delete-tag.json  end-merge.json  end-unmerge-hierarchical.json  end-unmerge-with-transaction.json  end-unmerge.json  error-with-null-threads.json  error-with-null-values-threads.json  error-with-single-thread.json  error-with-threads.json  exclude-groups.json  null-tag-keys.json  null-values.json  replace-group.json  sdk-info-java.json  start-delete-groups.json  start-merge.json  tombstone-events-no-datetime.json  tombstone-events-timestamp.json  tombstone-events.json  weird-transaction-source.json
examples/feedback-events/1/: widget.json
examples/generic-events/1/: generic.json  insert.json
examples/group-attributes/1/: assignee_changed.json  group_created.json  group_deleted.json  owner_changed.json
examples/ingest-attachments/1/: attachment.msgpack  attachment_chunk.msgpack
examples/ingest-events/1/: dev-default-message.msgpack
examples/ingest-feedback-events/1/: pokemart-widget-kcat.msgpack  relay-test_feedback_event_with_processing.msgpack  widget-react.json
examples/ingest-metrics/1/: base64-dist.json  base64-set.json  basic-counter.json  basic-distribution.json  basic-set.json  perf-distribution.json  sampled-distribution.json  zstd-dist-weighted.json  zstd-dist.json  zstd-set.json
examples/ingest-monitors/1/: checkin.msgpack  clock_pulse.msgpack
examples/ingest-occurrences/1/: monitor-failure.json
examples/ingest-replay-events/1/: archive.json  click-serialized.json  click.json  event-link.json  replayevent.json  segment.json  viewed.json
examples/ingest-replay-recordings/1/: recording-chunk.msgpack  recording.msgpack
examples/ingest-spans/1/: basic_span.json  missing_fields.json  null_fields.json  null_in_links.json  span_with_accepted_outcome.json  span_with_is_remote.json  valid_span.json
examples/ingest-transactions/1/: example.msgpack
examples/metrics/1/: metrics1
examples/monitors-clock-tasks/1/: mark_missing.json  mark_missing_abnormal.json  mark_timeout.json  mark_unknown.json
examples/monitors-clock-tick/1/: example-volume-abnormal.json  example.json  (+1 more)
examples/shared-resources-usage/: shared-resources-usage1.json
examples/snuba-eap-mutations/: example-1.json  mutation-1.json
python/: MANIFEST.in  generate_python_types.py  mypy.ini  requirements-build.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
python/sentry_kafka_schemas/: __init__.py  sentry_kafka_schemas.py  types.py
python/sentry_kafka_topics/: __init__.py  sentry_kafka_topics.py  types.py
python/tests/: test.schema.json  test_codecs.py  test_codeowner.py  test_examples.py  test_sentry_kafka_schemas.py  test_sentry_kafka_topics.py  test_valid_schemas.py  test_valid_topic_data.py
rust/: build.rs  lib.rs
rust/tests/: test_examples.rs
rust_codegen/: Cargo.toml
rust_codegen/src/: main.rs
schemas/: any.json  buffered-segment.v1.schema.json  buffered-segments.v1.schema.json  events.v1.schema.json  generic-events.v1.schema.json  generic_metrics.v1.schema.json  group-attributes.v1.schema.json  ingest-attachments.v1.schema.json  ingest-events.v1.schema.json  ingest-feedback-events.v1.schema.json  ingest-metrics.v1.schema.json  ingest-monitors.v1.schema.json  ingest-occurrences.v1.schema.json  ingest-replay-events.v1.schema.json  ingest-replay-recordings.v1.schema.json  ingest-spans.v1.schema.json  ingest-transactions.v1.schema.json  llm-proxy-cost.v1.schema.json  metrics.v1.schema.json  monitors-clock-tasks.v1.schema.json  monitors-clock-tick.v1.schema.json  monitors-incident-occurrences.v1.schema.json  outcomes-metrics.v1.schema.json  outcomes.v1.schema.json  preprod-artifact-events.v1.schema.json  profile-functions.v1.schema.json  profile-metadata.v1.schema.json  profiles.v1.schema.json  query-subscription-consumer.schema.json  querylog.schema.json  querylog.v1.schema.json  shared-resources-usage.v1.schema.json  snuba-eap-mutations.v1.schema.json  snuba-generic-metrics.v1.schema.json  snuba-items.v1.schema.json  snuba-llm-proxy-cost.v1.schema.json  snuba-lw-deletions-eap-items.v1.json  snuba-lw-deletions-generic-events.v1.schema.json  snuba-lw-deletions-search-issues.v1.schema.json  snuba-lw-deletions.v1.schema.json  (+16 more)
scripts/: edit-msgpack  generate_examples.js  json_schema_changes.py  msgpack2py  py2msgpack
tests/: test_examples.py
topics/: buffered-segment.yaml  buffered-segments-dlq.yaml  buffered-segments.yaml  eap-spans-subscription-results.yaml  errors.yaml  event-replacements.yaml  events-subscription-results.yaml  events.yaml  generic-events.yaml  generic-metrics-distribution-subscription-results.yaml  generic-metrics-sets-subscription-results.yaml  generic-metrics-subscription-results.yaml  generic_metrics.yaml  group-attributes.yaml  ingest-attachments-dlq.yaml  ingest-attachments.yaml  ingest-events-backlog.yaml  ingest-events-dlq.yaml  ingest-events.yaml  ingest-feedback-events-dlq.yaml  ingest-feedback-events.yaml  ingest-feedbacks.yaml  ingest-generic-metrics-dlq.yaml  ingest-metrics-dlq.yaml  ingest-metrics.yaml  ingest-monitors.yaml  ingest-occurrences.yaml  ingest-performance-metrics.yaml  ingest-replay-events.yaml  ingest-replay-recordings.yaml  ingest-spans-dlq.yaml  ingest-spans.yaml  ingest-transactions-backlog.yaml  ingest-transactions-blq.yaml  ingest-transactions-dlq.yaml  ingest-transactions.yaml  llm-proxy-cost-dlq.yaml  llm-proxy-cost.yaml  loadbalancer-outcomes.yaml  metrics-subscription-results.yaml  (+99 more)
(+81 files in other folders)
