[package]
name = "sentry-kafka-schemas"
authors = ["Sentry <oss@sentry.io>"]
description = "Kafka topics and schemas for Sentry"
repository = "https://github.com/getsentry/sentry-kafka-schemas"
license-file = "./LICENSE.md"
version = "0.1.59"
edition = "2021"

build = "rust/build.rs"
include = [
    "/examples/**",
    "/rust/*.rs",
    "/schemas/**",
    "/topics/**",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust/lib.rs"

[[bin]]
# register build.rs as binary so people can view generated code directly as well
# https://stackoverflow.com/a/53728256/1544347
name = "generate-schema-types"
path = "rust/build.rs"
required-features = ["type_generation"]

[features]
default = ["type_generation"]
type_generation = ["prettyplease", "schemars", "syn", "typify", "regress"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regress = { version = "0.5.0", optional = true }   # required by generated code
jsonschema = "0.17.1"
thiserror = "1.0.49"

# redeclare all build-dependencies here so that the build.rs can be used
# standalone to view types
prettyplease = { version = "0.2.4", optional = true }
schemars = { version = "0.8.0", optional = true }
syn = { version = "2.0.11", optional = true }
typify = { version = "0.0.11", optional = true }

[build-dependencies]
prettyplease = { version = "0.2.4", optional = true }
schemars = { version = "0.8.0", optional = true }
serde_json = "1.0"
syn = { version = "2.0.11", optional = true }
typify = { version = "0.0.11", optional = true }
jsonschema = "0.17.1"
thiserror = "1.0.49"
