# workaround for https://github.com/pypa/setuptools/issues/1801
# since we use a custom package_dir in setup.py, `pip uninstall` of editable
# installations was broken
# This file's existence is the workaround:
# https://github.com/pypa/setuptools/issues/1801#issuecomment-1284817405

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "sentry"
skip = "migrations"
